v4.0.0 Breaking changes:
- Renamed RequestProfileDataPermission to RequestPersonalProfileDataPermission.