@@ -440,7 +440,7 @@ GameObject:
   - component: {fileID: 487031770}
   - component: {fileID: 487031769}
   m_Layer: 5
-  m_Name: RequestProfileDataPermissionButton
+  m_Name: RequestPersonalProfileDataPermissionButton
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -512,7 +512,7 @@ MonoBehaviour:
       m_Calls:
       - m_Target: {fileID: 2102737976}
         m_TargetAssemblyTypeName: YandexGames.Samples.PlaytestingCanvas, Agava.YandexGames.Samples.Playtesting
-        m_MethodName: OnRequestProfileDataPermissionButtonClick
+        m_MethodName: OnRequestPersonalProfileDataPermissionButtonClick
         m_Mode: 1
         m_Arguments:
           m_ObjectArgument: {fileID: 0}
@@ -1888,7 +1888,7 @@ MonoBehaviour:
     m_HorizontalOverflow: 0
     m_VerticalOverflow: 0
     m_LineSpacing: 1
-  m_Text: Request profile data permission
+  m_Text: Request personal data permission
 --- !u!222 &1603297121
 CanvasRenderer:
   m_ObjectHideFlags: 0
@@ -2146,7 +2146,7 @@ GameObject:
   - component: {fileID: 2034433858}
   - component: {fileID: 2034433857}
   m_Layer: 5
-  m_Name: ProfileDataPermissionStatusText
+  m_Name: PersonalProfileDataPermissionStatusText
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -2204,7 +2204,7 @@ MonoBehaviour:
     m_HorizontalOverflow: 0
     m_VerticalOverflow: 0
     m_LineSpacing: 1
-  m_Text: Profile data permission status
+  m_Text: Personal data permission status
 --- !u!222 &2034433858
 CanvasRenderer:
   m_ObjectHideFlags: 0
@@ -2246,7 +2246,7 @@ MonoBehaviour:
   m_Name: 
   m_EditorClassIdentifier: 
   _authorizationStatusText: {fileID: 1717660117}
-  _profileDataPermissionStatusText: {fileID: 2034433857}
+  _personalProfileDataPermissionStatusText: {fileID: 2034433857}
 --- !u!114 &2102737977
 MonoBehaviour:
   m_ObjectHideFlags: 0
