@@ -1,2 +1,4 @@
 v4.0.0 Breaking changes:
+To make it clear that GetProfileData still returns some data if permissions were not granted:
 - Renamed RequestProfileDataPermission to RequestPersonalProfileDataPermission.
+- Renamed HasProfileDataPermission to HasPersonalProfileDataPermission.
